0project/k8s-demo/ExternalnameService.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-externalname
spec:
  type: ExternalName
  externalName: www.baidu.com
