0project/k8s-demo/ingress-nginx-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment        # Deployment名称
  namespace: ingress-nginx
  labels:
    app: nginx-deployment
spec:
  replicas: 2                   # 希望运行的 Pod 副本数量
  selector:
    matchLabels:
      app: nginx-deployment                # 用于选择它管理的 Pod 的标签
  template:
    metadata:
      labels:
        app: nginx-deployment              # Pod 的标签，必须与 selector.matchLabels 匹配
      # Pod的规格说明
    spec:
      containers:
        - name: nginx-container
          #          image: nginx:latest     # 使用的容器镜像
          image: nginx:1.15-alpine
          ports:
            - containerPort: 80     # 容器暴露的端口
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment2        # Deployment名称
  namespace: ingress-nginx
  labels:
    app: nginx-deployment2
spec:
  replicas: 2                   # 希望运行的 Pod 副本数量
  selector:
    matchLabels:
      app: nginx-deployment2                # 用于选择它管理的 Pod 的标签
  template:
    metadata:
      labels:
        app: nginx-deployment2              # Pod 的标签，必须与 selector.matchLabels 匹配
      # Pod的规格说明
    spec:
      containers:
        - name: nginx-container
          image: nginx:1.15-alpine
          ports:
            - containerPort: 80     # 容器暴露的端口
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ingress-nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:  # 配置 HTTPS 证书
    - hosts:
        - my-nginx-test.com
      secretName: nginx-tls-secret  # 存储证书的 Secret 名称（需提前创建）
  rules:
    - host: my-nginx-test.com
      http:
        paths:
          - backend:
              service:
                name: nginx-service
                port:
                  number: 80
            pathType: Prefix
            path: "/a"
          - backend:
              service:
                name: nginx-service2
                port:
                  number: 80
            pathType: ImplementationSpecific  # 需配合正则使用
            path: /b(/|$)(.*)
