0project/k8s-demo/ingress-nodeport.yaml

# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-node-port        # Deployment名称
  namespace: default
  labels:
    app: nginx-node-port
spec:
  replicas: 2                   # 希望运行的 Pod 副本数量
  selector:
    matchLabels:
      app: nginx-node-port               # 用于选择它管理的 Pod 的标签
  template:
    metadata:
      labels:
        app: nginx-node-port              # Pod 的标签，必须与 selector.matchLabels 匹配
      # Pod的规格说明
    spec:
      containers:
        - name: nginx-container
          #          image: nginx:latest     # 使用的容器镜像
          image: nginx:1.15-alpine
          ports:
            - containerPort: 80     # 容器暴露的端口


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: my-nginx-test.com
      http:
        paths:
          - backend:
              service:
                name: nginx-service
                port:
                  number: 80
            pathType: Prefix
            path: /
