0project/k8s-demo/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-test
  namespace: default
spec:
  ports:
    - port: 3306
      name: mysql
  clusterIP: None
  selector:
    app: mysql-dump
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: default
spec:
  selector:
    matchLabels:
      app: mysql-dump
  serviceName: mysql-test
  template:
    metadata:
      labels:
        app: mysql-dump
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: mysql-data
      volumes:
        - name: mysql-data
          hostPath:
            path: /opt/mysqldata

---
# 使用 traefik 进行路由-需要在 网关中暴露指定端口
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingresstcp-mysql-tcp
  namespace: default

spec:
  entryPoints:
    - web2
  routes:
    - match: HostSNI(`*`)
      priority: 10
      services:
        - name: mysql-test
          port: 3306
